@@ -18,9 +18,10 @@
 
 3.0.3
 -----
-Fixed bugg where IPADDRESS subject altname wasn't shown in certificate view.
+Fixed bugg in adduser page where email address wasn't saved when user existed
+Fixed bugg where IPADDRESS,GUID subject altname wasn't shown in certificate view.
 Fixed email field check bugg in add and edit user jsp pages.
-Fixed bugg in certificate profiles jsp page where critical extended keyusage couldn't be unchecked.
+Fixed bugg in certificate profiles jsp page where critical extended keyusade couldn't be unchecked.
 Added missing class in admin.jar for 'ca processreq'.
 Fixes to demo servlet.
 Fixed minor error in authorization log text.
